# rv1106-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  compose.yaml
.cargo/: config.toml
docker/: Dockerfile  arm-rockchip830-linux-uclibcgnueabihf.tar.xz  config.toml  rust_rv1106.tar.xz
examples/: Cargo.toml
patch/aws-lc/: 0001-fix-for-uclibc.patch
patch/rust/: 0001-remove-uclibc-dependency-on-getauxval.patch  config.toml
rv1106-sys/: Cargo.toml  build.rs  rknn.hpp  rockit.hpp
rv1106-sys/examples/common/: lib.rs
rv1106-sys/examples/rknn_yolov5/: main.rs
rv1106-sys/examples/rockit_get_frame/: main.rs
rv1106-sys/examples/rockit_venc_jpeg/: main.rs
rv1106-sys/include/rockit/: rk_comm_aio.h  rk_comm_ivs.h  rk_comm_rgn.h  rk_comm_venc.h  rk_common.h  rk_defines.h  rk_mpi_af.h  rk_mpi_avs.h  rk_mpi_ivs.h  rk_mpi_sys.h  rk_mpi_venc.h
rv1106-sys/src/: lib.rs  rknn.rs  rknn_bindings.rs  rockit.cpp  rockit.rs  rockit_bindings.rs
