[workspace]
resolver = "2"

members = [
    "rv1106-sys",
    "examples"
]

exclude = [
    "image-builder/**",
]

[workspace.package]
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = false
panic = "abort"
debug = false
debug-assertions = false
codegen-units = 1

[patch.crates-io]
aws-lc-rs = { path = "./third_party/aws-lc-rs/aws-lc-rs" }